# PDDP

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  draw_plots.py  requirements.txt  run.sh
lab1/data/: generate_data.py
lab1/src/: utils.cpp  utils.hpp
lab1/src/benchmark/: parallel.cpp  sequential.cpp
lab3/: README.md  docker-compose.yml
lab3/gpfdist/: Dockerfile  start.sh
lab3/plots/: distribution_analysis.py
lab3/postgres/init/: 01_schema.sql  02_load_csv.sql
lab3/pxf/: jdbc_postgres_config.xml
lab3/scripts/: download_data.sh  generate_ssh_keys.sh  setup.sh  setup_pxf.sh
lab3/sql/: distribution_analysis.sql  gp_tables.sql  gpfdist_external_table.sql  pxf_external_tables.sql  queries_v1.sql  queries_v2.sql  redistribution.sql
